kubernetes/apps/talos1018/adsb/adsb-api/app/service.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
